--- a/WarofAges/build.gradle
+++ b/WarofAges/build.gradle
@@ -82,6 +82,7 @@ project(":core") {
     dependencies {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        implementation 'com.google.code.gson:gson:2.8.6'
         
     }
 }
