--- a/WarofAges/build.gradle
+++ b/WarofAges/build.gradle
@@ -48,7 +48,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
-        
+        implementation 'com.google.code.gson:gson:2.8.6'
     }
 }
 
