--- a/WarofAges/build.gradle
+++ b/WarofAges/build.gradle
@@ -83,6 +83,6 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         implementation 'com.google.code.gson:gson:2.8.6'
-        
+        testImplementation('junit:junit:4.13')
     }
 }
